--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "MoiTran\\PrestoQueryBuilder\\": ["src"]
+            "MoiTran\\PrestoQueryBuilder\\": "src/"
         }
     }
 }
