--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": "^7.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3"
@@ -17,6 +17,11 @@
     "autoload": {
         "psr-4": {
             "MoiTran\\PrestoQueryBuilder\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MoiTran\\PrestoQueryBuilder\\Tests\\": "tests/"
         }
     }
 }
