--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "moitran/package-presto-query-builder-php",
     "description": "Build presto query string",
+    "type": "package",
     "license": "MIT",
     "authors": [
         {
@@ -12,7 +13,10 @@
         "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.3"
+        "phpunit/phpunit": "^7.3",
+        "symfony/var-dumper": "^4.2",
+        "phpmd/phpmd": "^2.6",
+        "squizlabs/php_codesniffer": "^3.3"
     },
     "autoload": {
         "psr-4": {
