--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,12 +5,12 @@
         verbose="true">
     <testsuites>
         <testsuite name="MoiTran-Presto-Query-Builder Test Suite">
-            <directory>tests</directory>
+            <directory>./tests</directory>
         </testsuite>
     </testsuites>
     <filter>
         <whitelist>
-            <directory suffix=".php">src</directory>
+            <directory>./src/</directory>
         </whitelist>
     </filter>
 </phpunit>
